fix: make buildpack deployments reproducible on installed hosts
